--- a/index.html
+++ b/index.html
@@ -10,12 +10,67 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600;700;800;900&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300,400;500;600;700;800;900&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="reset.css"> 
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+  <header class="header-block">
+    <div class="header__logo-block">
+      <img class="header__logo" src="assets/charma sitemap photos/638a4ae76d0f587399dbea49_CharmaLogo.svg"
+        alt="Charma icon">
+    </div>
+
+    <nav class="header__primary-nav">  
+      <ul class="primary-nav__list"> 
+        <li class="primary-nav__list-item"><a class="primary-nav__link" href="#">Product</a><img class="arrow-down" src="assets/charma sitemap photos/638a4ae76d0f586ae6dbea48_down-arrow-1.svg"></li>
+        <li class="primary-nav__list-item re-use"><a class="primary-nav__link" href="#">Use Cases</a><img class="arrow-down" src="assets/charma sitemap photos/638a4ae76d0f586ae6dbea48_down-arrow-1.svg"></li>
+        <li class="primary-nav__list-item re-use"><a class="primary-nav__link" href="#">Resources</a><img class="arrow-down" src="assets/charma sitemap photos/638a4ae76d0f586ae6dbea48_down-arrow-1.svg"></li>
+        <li class="primary-nav__list-item about"><a class="primary-nav__link" href="#">About</a></li>
+        <li class="primary-nav__list-item"><a class="primary-nav__link" href="#">Pricing</a></li>
+        <li class="primary-nav__list-item"><a class="primary-nav__link" href="#">Log in</a></li> 
+
+      </ul> 
+    </nav>
+
+    <div class="header__button-block">
+      <button class="header__button header__button1" type="button">Book a demo</button>
+
+      <button class="header__button header__button2" type="button">Try for free</button>
+    </div>
+  </header>
+
+  <main class="main-block">
+    <section class="main__hero-block">
+      <div class="hero__text-block">
+        <p class="hero__text">
+          Charma is the solution for managing recognition
+        </p>
+      </div>
+
+      <div class="hero__button-block">
+        <div class="hero__button">
+
+          <button class="hero__btn hero__button1" type="button">Try for free</button>
+
+          <button class="hero__btn hero__button2" type="button">Book ak demo</button>
+
+        </div>
+      </div>
+    </section>
+
+
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+  </main>
+
+  <footer></footer>
 </body>
 
 </html>
