feat(hero-section): add new hero section
Added a hero section containing hero text and buttons that have hover effects.

--- a/index.html
+++ b/index.html
@@ -23,16 +23,19 @@
         alt="Charma icon">
     </div>
 
-    <nav class="header__primary-nav">  
-      <ul class="primary-nav__list"> 
-        <li class="primary-nav__list-item"><a class="primary-nav__link" href="#">Product</a><img class="arrow-down" src="assets/charma sitemap photos/638a4ae76d0f586ae6dbea48_down-arrow-1.svg"></li>
-        <li class="primary-nav__list-item re-use"><a class="primary-nav__link" href="#">Use Cases</a><img class="arrow-down" src="assets/charma sitemap photos/638a4ae76d0f586ae6dbea48_down-arrow-1.svg"></li>
-        <li class="primary-nav__list-item re-use"><a class="primary-nav__link" href="#">Resources</a><img class="arrow-down" src="assets/charma sitemap photos/638a4ae76d0f586ae6dbea48_down-arrow-1.svg"></li>
+    <nav class="header__primary-nav">
+      <ul class="primary-nav__list">
+        <li class="primary-nav__list-item"><a class="primary-nav__link" href="#">Product</a><img class="arrow-down"
+            src="assets/charma sitemap photos/638a4ae76d0f586ae6dbea48_down-arrow-1.svg"></li>
+        <li class="primary-nav__list-item re-use"><a class="primary-nav__link" href="#">Use Cases</a><img
+            class="arrow-down" src="assets/charma sitemap photos/638a4ae76d0f586ae6dbea48_down-arrow-1.svg"></li>
+        <li class="primary-nav__list-item re-use"><a class="primary-nav__link" href="#">Resources</a><img
+            class="arrow-down" src="assets/charma sitemap photos/638a4ae76d0f586ae6dbea48_down-arrow-1.svg"></li>
         <li class="primary-nav__list-item about"><a class="primary-nav__link" href="#">About</a></li>
         <li class="primary-nav__list-item"><a class="primary-nav__link" href="#">Pricing</a></li>
-        <li class="primary-nav__list-item"><a class="primary-nav__link" href="#">Log in</a></li> 
+        <li class="primary-nav__list-item"><a class="primary-nav__link" href="#">Log in</a></li>
 
-      </ul> 
+      </ul>
     </nav>
 
     <div class="header__button-block">
@@ -43,11 +46,17 @@
   </header>
 
   <main class="main-block">
+    <!-- hero section -->
     <section class="main__hero-block">
       <div class="hero__text-block">
         <p class="hero__text">
-          Charma is the solution for managing recognition
+          Charma is the solution <br /><span class="icon-mug-block"><img class="icon-mug"
+              src="assets/charma sitemap photos/638a4ae76d0f582945dbeb35_Frame 106.png"></span> for managing
         </p>
+
+        <div class="hero__text-carousle-block">
+          <p class="hero__text-carousle">people.</p>
+        </div>
       </div>
 
       <div class="hero__button-block">
@@ -55,7 +64,7 @@
 
           <button class="hero__btn hero__button1" type="button">Try for free</button>
 
-          <button class="hero__btn hero__button2" type="button">Book ak demo</button>
+          <button class="hero__btn hero__button2" type="button">Book a demo</button>
 
         </div>
       </div>
