feat(hero): add illustrations
Added hero illustration section containing images and a demo link.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 
 <head>
-  <title>RS Project</title>
-  <meta name="description" content="A standard complaint website template.">
+  <title>Charma-Clone | People Management Software</title>
+  <meta content="Charma provides managers with AI-powered people management software that enables greater success."
+    name="description">
   <meta name="author" content="Samuel Akongbota">
   <meta charset="UTF-8">
   <meta name="robots" content="all">
@@ -19,17 +20,19 @@
   <header class="header-block">
     <div class="header__logo-block">
       <img class="header__logo" src="assets/charma sitemap photos/638a4ae76d0f587399dbea49_CharmaLogo.svg"
-        alt="Charma icon">
+        alt="Charma logo">
     </div>
 
     <nav class="header__primary-nav">
       <ul class="primary-nav__list">
         <li class="primary-nav__list-item"><a class="primary-nav__link" href="#">Product</a><img class="arrow-down"
-            src="assets/charma sitemap photos/638a4ae76d0f586ae6dbea48_down-arrow-1.svg"></li>
+            src="assets/charma sitemap photos/638a4ae76d0f586ae6dbea48_down-arrow-1.svg" alt="Arrow down image"></li>
         <li class="primary-nav__list-item re-use"><a class="primary-nav__link" href="#">Use Cases</a><img
-            class="arrow-down" src="assets/charma sitemap photos/638a4ae76d0f586ae6dbea48_down-arrow-1.svg"></li>
+            class="arrow-down" src="assets/charma sitemap photos/638a4ae76d0f586ae6dbea48_down-arrow-1.svg"
+            alt="Arrow down image"></li>
         <li class="primary-nav__list-item re-use"><a class="primary-nav__link" href="#">Resources</a><img
-            class="arrow-down" src="assets/charma sitemap photos/638a4ae76d0f586ae6dbea48_down-arrow-1.svg"></li>
+            class="arrow-down" src="assets/charma sitemap photos/638a4ae76d0f586ae6dbea48_down-arrow-1.svg"
+            alt="Arrow down image"></li>
         <li class="primary-nav__list-item about"><a class="primary-nav__link" href="#">About</a></li>
         <li class="primary-nav__list-item"><a class="primary-nav__link" href="#">Pricing</a></li>
         <li class="primary-nav__list-item"><a class="primary-nav__link" href="#">Log in</a></li>
@@ -50,7 +53,8 @@
       <div class="hero__text-block">
         <p class="hero__text">
           Charma is the solution <br /><span class="icon-mug-block"><img class="icon-mug"
-              src="assets/charma sitemap photos/638a4ae76d0f582945dbeb35_Frame 106.png"></span> for managing
+              src="assets/charma sitemap photos/638a4ae76d0f582945dbeb35_Frame 106.png" alt="Charma mug icon"></span>
+          for managing
         </p>
 
         <div class="hero__text-carousle-block">
@@ -67,10 +71,34 @@
 
         </div>
       </div>
+
+      <div class="hero__design-block"><img class="hero__design"
+          src="assets/charma sitemap photos/638a4ae76d0f586348dbea6c_computers.png" alt="Hero design"></div>
     </section>
 
+    <!-- hero illustration section -->
+    <section class="hero__illustration-block">
+      <div class="hero__illustration">
+        <div class="hero__illustration1"><img class="illustration1"
+            src="assets/charma sitemap photos/648339710244efd7c84c3bec_Group 1260-p-3200.png" alt="Hero main image">
+        </div>
+        <div class="hero__illustration2"><img class="illustration2"
+            src="assets/charma sitemap photos/64833971f8f86e07bd5a6966_366 (1).png" alt="360 Reviews"></div>
+        <div class="hero__illustration3"><img class="illustration3"
+            src="assets/charma sitemap photos/64833eb12d44ccfdb8b813e0_Meeting-p-1080.png" alt="Zoom meeting image">
+        </div>
+        <div class="hero__illustration4"><img class="illustration4"
+            src="assets/charma sitemap photos/6483397029fe8b29a262c6de_Frame 629 (2).png" alt="Feedback AI image"></div>
+        <div class="hero__illustration5"><img class="illustration5"
+            src="assets/charma sitemap photos/6483397040565db8549e9cca_364 (2).png" alt="Ishan kudus image"></div>
+      </div>
 
-    <section></section>
+      <div class="hero__illustration-text-block">
+        <p class="hero__illustration-text">Want to see Charma come to life? Watch our product <span
+            class="illustration-text__link-block"><a class="illustration-text__link" href="#">demo!</a></span></p>
+      </div>
+    </section>
+
     <section></section>
     <section></section>
     <section></section>
