feat: add product overview
Added a product overview section which contains cards and a link to the
to the respective products.

--- a/index.html
+++ b/index.html
@@ -99,7 +99,70 @@
       </div>
     </section>
 
-    <section></section>
+    <!-- product overview -->
+    <section class="main__product-overview-block">
+      <div class="product-overview__title-block">
+        <p class="product-overview__title">Strengthen your management,<br /> strengthen your team.</p>
+      </div>
+
+      <div class="product-overview__content-block">
+        <div class="product-overview__content">
+          <div class="product-overview__content-preview">
+            <div class="content-preview__image-block"></div>
+
+            <div class="content-preview__info-block">
+              <p class="content-preview__info-title">
+                Make one-on-one's add up to more.
+              </p>
+
+              <p class="content-preview__info-text">
+                Supercharge your meetings with consistent, AI-driven agendas that inspire deeper conversations about
+                achievement and growth. Say goodbye to dusty docs of meeting notes no one ever looks at!
+              </p>
+            </div>
+          </div>
+
+          <div class="product-overview__content-preview">
+            <div class="content-preview__image-block"></div>
+
+            <div class="content-preview__info-block">
+              <p class="content-preview__info-title">
+                Easily give valuable feedback.
+              </p>
+
+              <p class="content-preview__info-text">
+                Conquer the blank page and write meaningful feedback that helps your team get where it needs to go.
+                AI-assisted tools help you provide regular kudos and feedback, creating alignment and inclusion, instead
+                of simply rewarding the loudest voices.
+              </p>
+            </div>
+          </div>
+
+          <div class="product-overview__content-preview">
+            <div class="content-preview__image-block"></div>
+
+            <div class="content-preview__info-block">
+              <p class="content-preview__info-title">
+                Keep goals clear and top of mind.
+              </p>
+
+              <p class="content-preview__info-text">
+                Oversee your team’s work in real-time with AI-fueled insights, and make sure you and your team never
+                miss a beat. Everyone is committed to the mission when there is transparency around how their tasks and
+                to-dos support each company goal.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="product-overview__text-block">
+        <p class="product-overview__text">Charma product overview<span class="product-overview__text-arrow-right">
+            <img class="text-arrow-right" src="assets/charma sitemap photos/638a4ae76d0f5843d4dbea72_Text-arrow.svg" alt="Arrow right">
+          </span></p>
+      </div>
+    </section>
+
     <section></section>
     <section></section>
     <section></section>
