feat(scroll-tab): add scroll tab with carousel
Added a scroll-tab section which contains a smiley image and a carousel.

--- a/index.html
+++ b/index.html
@@ -158,12 +158,60 @@
 
       <div class="product-overview__text-block">
         <p class="product-overview__text">Charma product overview<span class="product-overview__text-arrow-right">
-            <img class="text-arrow-right" src="assets/charma sitemap photos/638a4ae76d0f5843d4dbea72_Text-arrow.svg" alt="Arrow right">
+            <img class="text-arrow-right" src="assets/charma sitemap photos/638a4ae76d0f5843d4dbea72_Text-arrow.svg"
+              alt="Arrow right">
           </span></p>
       </div>
     </section>
 
-    <section></section>
+    <!-- scroll tab -->
+    <section class="main__scroll-tab-block">
+      <div class="main__scroll-tab">
+
+        <div class="scroll-tab__info-block">
+
+          <div class="scroll-tab__info scroll-tab__snap1">
+            <p class="scroll-tap__info-text">
+              They conjure up great one on one’s. Sprinkle kudos over our achievements.
+            </p>
+          </div>
+
+          <div class="scroll-tab__info scroll-tab__snap2">
+            <p class="scroll-tap__info-text">
+              There’s something magical about a great manager.
+            </p>
+          </div>
+
+          <div class="scroll-tab__info scroll-tab__snap3">
+            <p class="scroll-tap__info-text">
+              They help every teammate succeed and grow.
+            </p>
+          </div>
+
+          <div class="scroll-tab__info scroll-tab__snap4">
+            <p class="scroll-tap__info-text">
+              Teams look back over the past year and marvel at the distance they have traveled together.
+            </p>
+          </div>
+
+          <div class="scroll-tab__info scroll-tab__snap5">
+            <p class="scroll-tap__info-text">
+              We believe with the right tools, all managers can be magical.
+            </p>
+          </div>
+
+        </div>
+
+      </div>
+
+      <div class="main__scroll-tab-image-block">
+        <div class="main__scroll-tab-image">
+          <img class="scroll-tab-image" src="assets/charma sitemap photos/638a4ae76d0f58d606dbea7d_Group 1285.png"
+            alt="Scroll tab smiley image">
+        </div>
+      </div>
+    </section>
+
     <section></section>
     <section></section>
     <section></section>
