fix(typo): :pencil2: fix typo in carousel
Renamed carousle to carousel.

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
           for managing
         </p>
 
-        <div class="hero__text-carousle-block">
-          <p class="hero__text-carousle">people.</p>
+        <div class="hero__text-carousel-block">
+          <p class="hero__text-carousel">people.</p>
         </div>
       </div>
 
