feat: add charma benefits
Added a benefit section which contains cards and images
projecting charma benefits for users.

--- a/index.html
+++ b/index.html
@@ -212,7 +212,105 @@
       </div>
     </section>
 
-    <section></section>
+    <!-- benefits -->
+    <section class="main__benefits-block">
+      <div class="benefits__title-block">
+        <p class="benefits__title">
+          High-performing teams benefit from using Charma.
+        </p>
+      </div>
+
+      <div class="main__benefits-preview-block">
+
+        <div class="benefits__preview-block">
+          <div class="benefits__preview-image-block">
+            <div class="benefits__preview-image-container  preview-image-container1">
+              <img class="benefits__preview-image"
+                src="assets/charma sitemap photos/638a4ae76d0f587ebfdbea73_Group 1255.png" alt="">
+            </div>
+          </div>
+
+          <div class="benefits__preview-info-block">
+            <div class="preview-info__title-block">
+              <p class="preview-info__title">
+                Managers and teams are aligned and accountable.
+              </p>
+            </div>
+
+            <div class="preview-info__text-block">
+              <p class="preview-info__text">
+                With cadences and content templates for one-on-ones, goals, feedback, and reviews, managers and
+                teammates
+                know exactly who needs to do what, by when.
+              </p>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="benefits__preview-block">
+          <div class="benefits__preview-image-block">
+            <div class="benefits__preview-image-container  preview-image-container2">
+              <img class="benefits__preview-image"
+                src="assets/charma sitemap photos/638a4ae76d0f58d991dbea74_Group 1254.png" alt="">
+            </div>
+          </div>
+
+          <div class="benefits__preview-info-block">
+            <div class="preview-info__title-block">
+              <p class="preview-info__title">
+                Execs create efficiency that pays off.
+              </p>
+            </div>
+
+            <div class="preview-info__text-block">
+              <p class="preview-info__text">
+                Managers and teams spend less time in unproductive meetings. Higher retention lowers recruiting expenses
+                and preserves team capacity.
+              </p>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="benefits__preview-block">
+          <div class="benefits__preview-image-block">
+            <div class="benefits__preview-image-container  preview-image-container3">
+              <img class="benefits__preview-image"
+                src="assets/charma sitemap photos/638a4ae76d0f5868eedbea75_Group 1253.png" alt="">
+            </div>
+          </div>
+
+          <div class="benefits__preview-info-block">
+            <div class="preview-info__title-block">
+              <p class="preview-info__title">
+                HR teams elevate well being.
+              </p>
+            </div>
+
+            <div class="preview-info__text-block">
+              <p class="preview-info__text">
+                Capable managers feel liked by their teams and see new paths for growth. Happier teammates perform
+                better
+                and see new paths for growth, too.
+              </p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
+      <div class="benefits__use-cases-text-block  product-overview__text-block">
+        <p class="benefits__use-cases-text  product-overview__text">
+          Use cases overview<span class="benefits__use-cases-text-arrow-right  product-overview__text-arrow-right">
+            <img class="use-cases__text-arrow-right  text-arrow-right"
+              src="assets/charma sitemap photos/638a4ae76d0f5843d4dbea72_Text-arrow.svg" alt="Arrow right">
+          </span>
+        </p>
+      </div>
+    </section>
+
     <section></section>
     <section></section>
   </main>
