feat(quote): add quote block
Added a quote block which contains a link, an image and a quote from
Lindsey Boggs.

--- a/index.html
+++ b/index.html
@@ -311,7 +311,55 @@
       </div>
     </section>
 
-    <section></section>
+    <!-- quote -->
+    <section class="main__quote-block">
+      <div class="main__quote-title-block">
+        <p class="main__quote-title">
+          Take it from manager of the year award winner Lindsey Boggs.
+        </p>
+      </div>
+
+      <div class="quote__award-winner-block">
+        <div class="award-winner__image-block">
+          <div class="award-winner__image-container">
+            <img class="award-winner__image"
+              src="assets/charma sitemap photos/63b9d9ebc0213a0be554ab9f_lindsey-boggs-no-logo.png"
+              alt="Lindsey bloggs">
+          </div>
+
+          <div class="award-winner__image-container2">
+            <img class="award-winner__image2"
+              src="assets/charma sitemap photos/638a4ae76d0f587bacdbea77_Untitled_Artwork 349 1.png" alt="">
+          </div>
+        </div>
+
+        <div class="quote__award-winner-info-block">
+          <div class="award-winner__title-block">
+            <p class="award-winner-info__title">
+              “Charma took me from a manager to a leader.”
+            </p>
+          </div>
+
+          <div class="award-winner-info__text-block">
+            <p class="award-winner-info__text">
+              “Charma has changed my leadership for the better. My direct reports are thriving and Charma has played a
+              huge role in that.”
+            </p>
+          </div>
+
+          <div class="award-winner__link-text-block  product-overview__text-block">
+            <p class="award-winner__link-text  product-overview__text">
+              Get to know Lindsey and team
+              <span class="link-text__arrow-right  product-overview__text-arrow-right">
+                <img class="link-text__arrow-image  text-arrow-right"
+                  src="assets/charma sitemap photos/638a4ae76d0f5843d4dbea72_Text-arrow.svg" alt="Arrow right">
+              </span>
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section></section>
   </main>
 
