feat(orgs): add organization block
Added an organization block which holds a carousel of the various
organizations that have used Charma.

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
           <div class="benefits__preview-image-block">
             <div class="benefits__preview-image-container  preview-image-container1">
               <img class="benefits__preview-image"
-                src="assets/charma sitemap photos/638a4ae76d0f587ebfdbea73_Group 1255.png" alt="">
+                src="assets/charma sitemap photos/638a4ae76d0f587ebfdbea73_Group 1255.png" alt="Manager Charmies">
             </div>
           </div>
 
@@ -252,7 +252,7 @@
           <div class="benefits__preview-image-block">
             <div class="benefits__preview-image-container  preview-image-container2">
               <img class="benefits__preview-image"
-                src="assets/charma sitemap photos/638a4ae76d0f58d991dbea74_Group 1254.png" alt="">
+                src="assets/charma sitemap photos/638a4ae76d0f58d991dbea74_Group 1254.png" alt="Executive Charmies">
             </div>
           </div>
 
@@ -277,7 +277,7 @@
           <div class="benefits__preview-image-block">
             <div class="benefits__preview-image-container  preview-image-container3">
               <img class="benefits__preview-image"
-                src="assets/charma sitemap photos/638a4ae76d0f5868eedbea75_Group 1253.png" alt="">
+                src="assets/charma sitemap photos/638a4ae76d0f5868eedbea75_Group 1253.png" alt="HR Charmies">
             </div>
           </div>
 
@@ -329,7 +329,7 @@
 
           <div class="award-winner__image-container2">
             <img class="award-winner__image2"
-              src="assets/charma sitemap photos/638a4ae76d0f587bacdbea77_Untitled_Artwork 349 1.png" alt="">
+              src="assets/charma sitemap photos/638a4ae76d0f587bacdbea77_Untitled_Artwork 349 1.png" alt="Star artwork">
           </div>
         </div>
 
@@ -360,7 +360,217 @@
       </div>
     </section>
 
-    <section></section>
+    <!-- organizations -->
+    <section class="main__orgs-block">
+      <div class="main__orgs-text-block">
+        <p class="main__orgs-text">
+          Works like a charm for all types of orgs.
+        </p>
+      </div>
+
+      <div class="main__orgs-logo-block">
+        <div class="main__orgs-logo-container-block  main__orgs-logo-container-block1">
+          <div class="main__orgs-logo-container">
+            <img class="main__orgs-logo"
+              src="assets/charma sitemap photos/638e5cd68ec38d35dc65855e_26_Clientlogo-Frontier 1$.png"
+              alt="Frontier logo">
+          </div>
+        </div>
+
+        <div class="main__orgs-logo-container-block  main__orgs-logo-container-block2">
+          <div class="main__orgs-logo-container">
+            <img class="main__orgs-logo"
+              src="assets/charma sitemap photos/638e5fe37c826ec1c739fcc2_25_Clientlogo-TheaterOffensive 1$.png"
+              alt="TheaterOffensive logo">
+          </div>
+        </div>
+
+        <div class="main__orgs-logo-container-block  main__orgs-logo-container-block3">
+          <div class="main__orgs-logo-container">
+            <img class="main__orgs-logo"
+              src="assets/charma sitemap photos/638e5c949cd4ab802226eb5f_24_Clientlogo-Cherre 1$.png" alt="Cherre logo">
+          </div>
+        </div>
+
+        <div class="main__orgs-logo-container-block  main__orgs-logo-container-block4">
+          <div class="main__orgs-logo-container">
+            <img class="main__orgs-logo" src="assets/charma sitemap photos/638e5c7fed8f0070bac4610d_23_Group 1295$.png"
+              alt="Pebble labs logo">
+          </div>
+
+        </div>
+
+        <div class="main__orgs-logo-container-block  main__orgs-logo-container-block5">
+          <div class="main__orgs-logo-container">
+            <img class="main__orgs-logo"
+              src="assets/charma sitemap photos/638e5c648791b7022f451098_22_Clientlogo-Navigate360 1$.png"
+              alt="Navigate360 logo">
+          </div>
+        </div>
+
+        <div class="main__orgs-logo-container-block  main__orgs-logo-container-block6">
+          <div class="main__orgs-logo-container">
+            <img class="main__orgs-logo"
+              src="assets/charma sitemap photos/638e5c4ca986f4cf386e5d5d_21_Clientlogo-KeyrenterDenver 1$.png"
+              alt="Key renter logo">
+          </div>
+        </div>
+
+        <div class="main__orgs-logo-container-block  main__orgs-logo-container-block7">
+          <div class="main__orgs-logo-container">
+            <img class="main__orgs-logo" src="assets/charma sitemap photos/638e5c35282195e6b85d2353_20_Group 1292$.png"
+              alt="Corsearch logo">
+          </div>
+        </div>
+
+
+        <div class="main__orgs-logo-container-block  main__orgs-logo-container-block8">
+          <div class="main__orgs-logo-container">
+            <img class="main__orgs-logo"
+              src="assets/charma sitemap photos/638e5fd6d71cad70e67d8d9a_19_Clientlogo-GirlScoutsNYC 1$-p-500.png"
+              alt="GirlScouts logo">
+          </div>
+        </div>
+
+        <div class="main__orgs-logo-container-block  main__orgs-logo-container-block9">
+          <div class="main__orgs-logo-container">
+            <img class="main__orgs-logo" src="assets/charma sitemap photos/638e5c0008c47ac848cc5c75_18_Group 1293$.png"
+              alt="Blueport logo">
+          </div>
+        </div>
+
+        <div class="main__orgs-logo-container-block  main__orgs-logo-container-block10">
+          <div class="main__orgs-logo-container">
+            <img class="main__orgs-logo"
+              src="assets/charma sitemap photos/638e5bdfdca18a908a9a727c_17_Clientlogo-RestorationBuilders 1$.png"
+              alt="Restoration builders logo">
+          </div>
+        </div>
+
+        <div class="main__orgs-logo-container-block  main__orgs-logo-container-block11">
+          <div class="main__orgs-logo-container">
+            <img class="main__orgs-logo"
+              src="assets/charma sitemap photos/638e5bc29cd4ab04e726d543_16_Clientlogo-Entrepreneur 1$.png"
+              alt="Entrepreneur logo">
+          </div>
+        </div>
+
+        <div class="main__orgs-logo-container-block  main__orgs-logo-container-block12">
+          <div class="main__orgs-logo-container">
+            <img class="main__orgs-logo"
+              src="assets/charma sitemap photos/638e5ba952464d85c5c1098e_15_Clientlogo-DutchBros 1$.png"
+              alt="DutchBros logo">
+          </div>
+        </div>
+
+        <div class="main__orgs-logo-container-block  main__orgs-logo-container-block13">
+          <div class="main__orgs-logo-container">
+            <img class="main__orgs-logo"
+              src="assets/charma sitemap photos/638e5b957d69f62e240e919a_14_Clientlogo-Funraise 1$.png"
+              alt="Funraise logo">
+          </div>
+        </div>
+
+        <div class="main__orgs-logo-container-block  main__orgs-logo-container-block14">
+          <div class="main__orgs-logo-container">
+            <img class="main__orgs-logo"
+              src="assets/charma sitemap photos/638e5b81f9c7b02958cc6322_13_Clientlogo-Mynd 1$.png" alt="Mynd logo">
+          </div>
+        </div>
+
+        <div class="main__orgs-logo-container-block  main__orgs-logo-container-block15">
+          <div class="main__orgs-logo-container">
+            <img class="main__orgs-logo"
+              src="assets/charma sitemap photos/638e5b6c63c36e1e3bfc366a_12_Clientlogo-Legendary 1$.png"
+              alt="Legendary logo">
+          </div>
+        </div>
+
+        <div class="main__orgs-logo-container-block  main__orgs-logo-container-block16">
+          <div class="main__orgs-logo-container">
+            <img class="main__orgs-logo"
+              src="assets/charma sitemap photos/638e5b57370461f8cc86f0d2_11_Clientlogo-Routeware 1$.png"
+              alt="Routeware logo">
+          </div>
+        </div>
+
+        <div class="main__orgs-logo-container-block  main__orgs-logo-container-block17">
+          <div class="main__orgs-logo-container">
+            <img class="main__orgs-logo"
+              src="assets/charma sitemap photos/638e5b389cd4ab6b8226c7aa_10_Clientlogo-NRS 1$.png" alt="NRS logo">
+          </div>
+        </div>
+
+        <div class="main__orgs-logo-container-block  main__orgs-logo-container-block18">
+          <div class="main__orgs-logo-container">
+            <img class="main__orgs-logo"
+              src="assets/charma sitemap photos/638e5b1bafaf637b70c8e7c2_09_Clientlogo-Dialpad$.png" alt="Dialpad logo">
+          </div>
+        </div>
+
+        <div class="main__orgs-logo-container-block  main__orgs-logo-container-block19">
+          <div class="main__orgs-logo-container">
+            <img class="main__orgs-logo"
+              src="assets/charma sitemap photos/638e5fc163c36e007afc79fc_08_Clientlogo-Northeasternuniversity$.png"
+              alt="North Eastern University logo">
+          </div>
+        </div>
+
+        <div class="main__orgs-logo-container-block  main__orgs-logo-container-block20">
+          <div class="main__orgs-logo-container">
+            <img class="main__orgs-logo"
+              src="assets/charma sitemap photos/638e5ae39aa41982a61a62eb_07_Clientlogo-Panasonic$-p-500.png"
+              alt="Panasonic logo">
+          </div>
+        </div>
+
+        <div class="main__orgs-logo-container-block  main__orgs-logo-container-block21">
+          <div class="main__orgs-logo-container">
+            <img class="main__orgs-logo"
+              src="assets/charma sitemap photos/638e5ad2abac24364e8e255c_06_Clientlogo-UCSD 1$.png" alt="UCSD logo">
+          </div>
+        </div>
+
+        <div class="main__orgs-logo-container-block  main__orgs-logo-container-block22">
+          <div class="main__orgs-logo-container">
+            <img class="main__orgs-logo"
+              src="assets/charma sitemap photos/638e5aa0da4dcdb3faddae78_05_Clientlogo-Procore 1$.png"
+              alt="Procore logo">
+          </div>
+        </div>
+
+        <div class="main__orgs-logo-container-block  main__orgs-logo-container-block23">
+          <div class="main__orgs-logo-container">
+            <img class="main__orgs-logo"
+              src="assets/charma sitemap photos/638e5a87abac244bc88e2033_04_Clientlogo-Lendingtree 1$.png"
+              alt="Lendingtree logo">
+          </div>
+        </div>
+
+        <div class="main__orgs-logo-container-block  main__orgs-logo-container-block24">
+          <div class="main__orgs-logo-container">
+            <img class="main__orgs-logo" src="assets/charma sitemap photos/638e5a708bb6c5f25a54ddf8_03_Group 1294$.png"
+              alt="Sila logo">
+          </div>
+        </div>
+
+        <div class="main__orgs-logo-container-block  main__orgs-logo-container-block25">
+          <div class="main__orgs-logo-container">
+            <img class="main__orgs-logo"
+              src="assets/charma sitemap photos/638e5a5ab3ed346595e84736_02_Clientlogo-Carfax 1$-p-500.png"
+              alt="Carfax logo">
+          </div>
+        </div>
+
+        <div class="main__orgs-logo-container-block  main__orgs-logo-container-block26">
+          <div class="main__orgs-logo-container">
+            <img class="main__orgs-logo"
+              src="assets/charma sitemap photos/638e5a2f643cfab4c16b42a5_01_Clientlogo-Yeti 1$.png" alt="Yeti logo">
+          </div>
+        </div>
+
+      </div>
+    </section>
   </main>
 
   <footer></footer>
