feat(strip): add strip block
Added a strip block with an image, free and demo buttons.

--- a/index.html
+++ b/index.html
@@ -571,6 +571,23 @@
 
       </div>
     </section>
+
+    <!-- strip -->
+    <section class="main__strip-block">
+      <div class="main__strip-text-block">
+        <p class="main__strip-text">Quickly become the manager you always wished <span
+            class="strip-text__flower-icon-block  icon-mug-block"><img class="strip-text__flower-icon  icon-mug"
+              src="assets/charma sitemap photos/638a4ae76d0f580568dbeb32_Frame 107.png" alt="Flower icon"></span> you
+          had.</p>
+      </div>
+
+      <div class="main__strip-button-block">
+        <div class="main__strip-button">
+          <button class="strip-button hero__btn hero__button1" type="button">Try for free</button>
+          <button class="strip-button hero__btn hero__button2" type="button">Book a demo</button>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer></footer>
